@@ -1,6 +1,7 @@
 0.8.13
 ------
   * Modify kdump udev rules to work with systemd (and clean them up)
+  * Support percent-encoded URLs for KDUMP_SAVEDIR
 
 0.8.12
 ------
